--- a/climate.ipynb
+++ b/climate.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -463,19 +463,23 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "most_active_stations = session.query(Measurement.station, func.count(Measurement.station))\\\n",
+    ".group_by(Measurement.station)\\\n",
+    ".order_by(func.count(Measurement.station).desc()).all()\n",
+    "most_active_stations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -484,14 +488,17 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature most active station?\n"
+    "# highest temperature recorded, and average temperature most active station?\n",
+    "most_active = most_active_stations[0][0]\n",
+    "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs))\\\n",
+    ".filter(Measurement.station == most_active_station).all()"
    ]
   },
   {
