--- a/climate.ipynb
+++ b/climate.ipynb
@@ -237,7 +237,8 @@
    "source": [
     "# Perform a query to retrieve the data and precipitation scores\n",
     "precipitation_last_12_months = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= start_year).all()\n",
-    "precipitation_last_12_months[:5]\n"
+    "precipitation_last_12_months[:5]\n",
+    "\n"
    ]
   },
   {
